# E2EMLOps

./: .dockerignore  .env.local  .gitignore  Dockerfile  Dockerfile.devcontainer  Dockerfile.lambdafn  LICENSE  Makefile  README.md  cdk.json  data.dvc  dvc.yaml  project_structure.txt  pyproject.toml  requirements.cpu.txt  requirements.gpu.txt
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: 01A_Deployment_Train_And_Store.yaml  01B_Deployment_ArgoCD_And_Promote.yaml  01C_Deployment_PR.yaml  01D_Deployment_PR_Train_And_Store.yaml  01_Deployment_Main.yaml  01_build_image_ec2_train_save_artifacts.yaml  01_ec2_pipeline_latest.yaml  02_Deployment_Hugging_Face_Gradio.yaml  02_gradio_deploy.yaml  03_Lambda_Deployment.yaml  10_ec2_pipeline.yaml  11_ec2_pipeline.yaml  12_training_part2  13_ec2_pipeline.yaml  2_pipeline.yaml  3_ec2_pipeline.yaml  4_ec2_pipeline.yaml  5_ec2_pipeline.yaml  6_ec2_pipeline.yaml  7_ec2_pipeline.yaml  8_ec2_pipeline.yaml  9_ec2_pipeline.yaml  Debug_01E_Deployment_PR_Push_Image.yaml  Debug_01E_Deployment_PR_Train_And_Store.yaml  Debug_01F_Deployment_ArgoCD_And_Promote_debug.yaml  Debug_01_ec2_pipeline_latest.yaml  ec2-pipeline-end-to-end.yaml  ec2_pipeline.yaml  uv.yaml
Dockerspool/: Dockerfile.fastapi.sports  Dockerfile.fastapi.vegfruits  README.md
K8SDeploy/: Dockerfile  README.md  README_Docker.md  README_EKS.md  TODO.md
K8SDeploy/AWSLambdas/: .dockerignore  app.py
K8SDeploy/eks-cluster-config/: aws-ebs-csi-driver-trust-policy.json  eks-cluster.yaml  iam-s3-test-policy.json  image-classifier.yml  imagenet-classifier-1.yml  imagenet-classifier-2.yml  imagenet-classifier.yml  input_sports.json  payload_creation.py  sports-classifier.yml  test_kserve_helm.py  test_kserve_imagenet.py  test_kserve_sports.py  test_kserve_sports_2.py  test_kserver_sports_2.py  test_load_sports_2.py  test_load_vegfruits_2.py  vegfruits-classifier.yml
K8SDeploy/fastapi-helm/: values.yaml
K8SDeploy/fastapi-helm/templates/: model-server.cm.yml  model-server.inferenceservice.yml  web-server.deployment.yml
K8SDeploy/src/model-server/: Dockerfile.model-onnx-server  Dockerfile.model-server  README.md  load_kserve_in.py  requirements-onnx.txt  requirements.txt  server.py  test.py
K8SDeploy/src/model-server/deployments/: classifier_handler.py  create_mar.py  download_all.py  model_playgorund.py  requirements.txt  test_endpoint.py
K8SDeploy/src/ui-server/: Dockerfile.ui-server
K8SDeploy/src/ui-server/ui/: package-lock.json  package.json
K8SDeploy/src/ui-server/ui/app/predict_app1/: route.ts
K8SDeploy/src/ui-server/ui/app/predict_app2/: route.ts
K8SDeploy/src/web-server/: Dockerfile.web-server  requirements.txt  server.py  test.py
LambdaFn/: Dockerfile.lambdafn  README.md  app.py  cdk.py  download_files.py  main.py  requirements.lambda.txt
assets/: README.md
checkpoints/model_stores/sports/: config.properties
checkpoints/model_stores/vegfruits/: config.properties
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml
configs/data/: default.yaml  dsports.yaml  dvegfruits.yaml
configs/debug/: profiler.yaml
configs/experiment/: default.yaml  esports.yaml  evegfruits.yaml  hsports.yaml  hvegfruits.yaml
configs/hydra/: default.yaml  joblib.yaml  optuna.yaml
configs/logger/: csv.yaml  tensorboard.yaml
configs/model/: default.yaml  msports.yaml  mvegfruits.yaml
configs/trainer/: default.yaml  gpu.yaml
data/processed/: .gitignore  sports.dvc  vegfruits.dvc
gradio_deploy/: README.md  app.py  app_gradio_2.py  app_gradio_py.py  requirements.txt
notebooks/: sportsmodel.ipynb  vegfruitsmodel.ipynb
shscripts/: download_zips.sh  post_container.sh
src/backend/fastapi_app/: fapi_sports.py  fapi_vegfruits.py
src/backend/torch_local/: eval.py  onnx_test_sports.py  onnx_test_vegfruits.py  train.py  transfer_mar.py  transfer_mar_2.py
src/backend/torch_local/datamodules/: sports_dm.py  vegfruits_dm.py
src/backend/torch_local/models/: msports.py  msports_v1.py  mvegfruits.py
src/backend/torch_local/utils/: helpers.py  instantiators.py  logging_utils.py  pyloggers.py  rich_utils.py
src/backend/torchserve_app/: README.md  metrics.yaml  sports_handler.py  sports_handler_old.py  vegfruits_handler_old.py  vegfruits_swagger.json
src/frontend/ui/: package.json
src/frontend/ui/app/: page.tsx
src/frontend/ui/app/predict_app1/: route.ts
src/frontend/ui/app/predict_app2/: route.ts
src/frontend/ui/components/: SimpleFileUploadApp1.js  SimpleFileUploadApp2.js
testing/loadtest/: README.md
