[project]
name = "E2EMLOps"
version = "0.1.0"
description = "End to End CI/CD pipeline from training, testing, reporting to deployment"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tabulate==0.9.0",
    "pillow==11.0.0",
    "black>=24.8.0",
    "mlflow>=2.17.0",
    "dvc-gdrive>=3.0.1",
    "dvc>=3.55.2",
    "dvc[gs]>=3.0.1",
    "dvc[s3]>=3.2.0",
    "lightning[extra]==2.4.0",
    "loguru>=0.7.2",
    "rich>=13.8.1",
    "tensorboard==2.17.1",
    "timm==1.0.9",
    "gdown==5.2.0",
    "hydra-core==1.3.0",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "comet_ml==3.47.0",
    "python-dotenv==1.0.1",
    "matplotlib==3.9.2",
    "hydra-joblib-launcher>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "rootutils==1.0.7",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "coverage==7.6.3",
    "pytest-order==1.3.0",
    "pytest-ordering==0.6",
    "pytest-dependency==0.6.0",
    "aim>=3.25.0",
    "huggingface_hub>=0.26.2",
    "pillow>=11.0.0",
    "gradio>=5.7.0",
    "onnx==1.17.0",
    "psutil>=7.0.0",
    "onnxruntime==1.20.1",
    "onnxruntime-genai==0.6.0",
    "huggingface-hub==0.27.1",
      "gradio==5.12.0",
      "gradio_client==1.5.4",
      "fastapi==0.115.6",
      "uvicorn==0.32.1",
      "requests==2.32.3",
      "numpy==2.1.3",
      "torchserve==0.12.0",
      "torch-model-archiver==0.12.0",
      "torch-workflow-archiver==0.2.15"
     
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
